# wizzMania

./: .gitignore  CMakeLists.txt  Looping1.lo1  Looping1.loo  README.md  docker-compose.yml  httplib.h  launch-macos.sh  main  main.cpp  package-lock.json
.github/workflows/: branch-naming.yml  docker-ci.yml  run-tests.yml
auth_service/: CMakeLists.txt  Dockerfile  main.cpp
auth_service/proto/: auth.proto
auth_service/scripts/: test-auth-rbac.ps1  test-auth.ps1
auth_service/src/: auth_service.cpp  main.cpp
auth_service/src/db/: Database.cpp  Database.h
auth_service/src/service/: AuthServiceImpl.cpp  AuthServiceImpl.h
auth_service/src/utils/: EnvLoader.cpp
auth_service/tests/: CMakeLists.txt  test_auth_service.cpp
auth_service/tests/mocks/: MockAuthManager.h  MockDatabase.h
client_server/: client.cpp
docs/: gap-analysis.md
gateway_service/: CMakeLists.txt
gateway_service/proto/: gateway.proto
gateway_service/src/: GatewayServiceImpl.cpp  main.cpp
init/: bootstrap_admin.sql  schema.sql
server/: server.cpp
services/auth_service/: .dockerignore  CMakeLists.txt  Dockerfile
services/auth_service/proto/: auth.proto
services/auth_service/src/: AuthManager.cpp  AuthManager.h  AuthServiceImpl.cpp  AuthServiceImpl.h  auth_service.cpp  auth_test_client.cpp  main.cpp
services/client_server/: medical_client.cpp  simple_client.cpp  simple_http_client  simple_http_client.cpp  test_connection.cpp
services/file_service/: .dockerignore  CMakeLists.txt  Dockerfile
services/file_service/proto/: file_service.proto
services/file_service/src/: FileServiceImpl.cpp  FileServiceImpl.h  FileServiceTestClient.cpp  main.cpp
services/messaging_service/: CMakeLists.txt  Dockerfile
services/messaging_service/proto/: messaging.proto
services/messaging_service/src/: messaging_service.cpp  test_client.cpp
services/messaging_service/src/db/: Database.cpp  Database.h
services/messaging_service/src/utils/: Base64.cpp  Base64.h  EnvLoader.cpp  EnvLoader.h
services/messaging_service/tests/: CMakeLists.txt  test_messaging_service.cpp
services/messaging_service/tests/mocks/: MockMessagingDatabase.h
services/server/: server.cpp  server.crt  server.key  test_https_server.cpp
src/models/: Contact.h  Message.h  User.h
src/services/: AuthService.h  FileService.h  MessagingService.h
src/ui/components/: ContactRow.h  MessageBubble.h
src/ui/pages/: ContactsPage.h  ConversationPage.h  MapPage.h
src/ui/windows/: CreateRoomDialog.h  CreateUserDialog.h  DeleteRoomDialog.h  DeleteUserDialog.h  LoginWindow.h  MainWindow.h
src/utils/: StyleHelper.h
test/: cleanup_test_user.sql  diagnose_rbac.py  fix_user_role.sql  postman_grpc_setup.md  requirements-messaging.txt  test_admin_connectivity.ps1  test_admin_login.py  test_auth_basic.sh  test_file_service.sh  test_unit1.sh
test/java-messaging-client/: README.md  pom.xml
test/java-messaging-client/src/test/java/com/wizzmania/messaging/: MessagingServiceIT.java
